--- a/Main/Main.html
+++ b/Main/Main.html
@@ -62,7 +62,7 @@
                     size: "medium",
                     authorization: function () {
                         // Replace this function with the code to authorize the payment
-                        var amount = "10.00"; // Replace with the actual payment amount
+                        var amount = "10.00";
                         var referenceId = "ORDER_REFERENCE_ID"; // Replace with a unique order reference ID for your order
                         var options = {
                             amount: {
