--- a/Main/Main.html
+++ b/Main/Main.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+    <!-- Menu bar -->
     <div class="menu" id="menu">
         <a class="menu-logo" href="#">Your Website Name</a>
         <div class="menu-items">
@@ -26,9 +27,22 @@
             <p>You will receive an email with details that your website will be live with a custom domain.</p>
         </div>
 
-        <!-- Amazon Pay button placeholder -->
-        <div id="amazon-pay-button"></div>
-
+        <!-- Amazon Pay button -->
+        <script async src="https://static-na.payments-amazon.com/OffAmazonPayments/us/sandbox/js/Widgets.js"></script>
+        <div
+            data-ap-widget-type="expressPaymentButton"
+            data-ap-signature="YuX%2B3pzGuop%2BDZIyOnrsBHopTz%2FUYDvDwVb%2BYa5dy1o%3D"
+            data-ap-seller-id="A1C8246Z3S2KSA"
+            data-ap-access-key="AKIAJDMUY3RVBOZYSI3A"
+            data-ap-lwa-client-id="amzn1.application-oa2-client.70585090f28e4f8381f38eeefaa9f7af"
+            data-ap-return-url="https://jturkey5.github.io/"
+            data-ap-currency-code="USD"
+            data-ap-amount="100"
+            data-ap-note=""
+            data-ap-shipping-address-required="false"
+            data-ap-payment-action="None"
+        >
+        </div>
     </div>
 
     <!-- Footer -->
@@ -46,55 +60,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Amazon Pay Integration -->
-    <script type="text/javascript" src="https://static-na.payments-amazon.com/OffAmazonPayments/us/sandbox/js/Widgets.js"></script>
-
-    <script>
-        window.onAmazonLoginReady = function () {
-            amazon.Login.setClientId("amzn1.application-oa2-client.70585090f28e4f8381f38eeefaa9f7af");
-
-            // Move the onAmazonPaymentsReady function inside onAmazonLoginReady
-            window.onAmazonPaymentsReady = function () {
-                new OffAmazonPayments.Button("amazon-pay-button", "A1C8246Z3S2KSA", {
-                    type: "PwA",
-                    color: "Gold",
-                    size: "medium",
-                    authorization: function () {
-                        // Replace this function with the code to authorize the payment
-                        var amount = "10.00";
-                        var referenceId = "ORDER_REFERENCE_ID"; // Replace with a unique order reference ID for your order
-                        var options = {
-                            amount: {
-                                currencyCode: "USD",
-                                amount: amount,
-                            },
-                            sellerNote: "Payment for your order",
-                            sellerOrderId: referenceId,
-                            storeName: "Your Store Name",
-                        };
-
-                        // Call the Amazon Pay API to authorize the payment
-                        amazon.Pay.authorize(options, function (authorization) {
-                            // The payment is authorized, you can now process the order
-                            console.log("Authorization successful:", authorization);
-                            // Implement additional logic here, e.g., send order details to your server for processing
-
-                            // For testing purposes, you can redirect to a success page
-                            window.location.href = "success.html";
-                        }, function (error) {
-                            // Handle errors during payment authorization
-                            console.error("Authorization error:", error);
-                        });
-                    },
-                    onError: function (error) {
-                        // Handle errors when the Amazon Pay button cannot be rendered
-                        console.error("Amazon Pay button error:", error);
-                    }
-                });
-            };
-        };
-    </script>
 </body>
 
 </html>
